--- a/crud-angular-19-master/package.json
+++ b/crud-angular-19-master/package.json
@@ -8,6 +8,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "test:watch": "ng test --watch",
     "serve:ssr:my-task-board": "node dist/my-task-board/server/server.mjs",
     "lint": "ng lint",
     "lint:fix": "ng lint --fix",
@@ -15,40 +16,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.1.0",
+    "@angular/animations": "^19.1.3",
     "@angular/cdk": "^18.2.8",
-    "@angular/common": "^18.1.0",
-    "@angular/compiler": "^18.1.0",
-    "@angular/core": "^18.1.0",
-    "@angular/forms": "^18.1.0",
+    "@angular/common": "^19.1.3",
+    "@angular/compiler": "^19.1.3",
+    "@angular/core": "^19.1.3",
+    "@angular/forms": "^19.1.3",
     "@angular/material": "^18.2.8",
-    "@angular/platform-browser": "^18.1.0",
-    "@angular/platform-browser-dynamic": "^18.1.0",
-    "@angular/platform-server": "^18.1.0",
-    "@angular/router": "^18.1.0",
-    "@angular/ssr": "^18.1.0",
+    "@angular/platform-browser": "^19.1.3",
+    "@angular/platform-browser-dynamic": "^19.1.3",
+    "@angular/platform-server": "^19.1.3",
+    "@angular/router": "^19.1.3",
+    "@angular/ssr": "^19.1.4",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.1.0",
+    "@angular-builders/jest": "^19.0.0",
+    "@angular-devkit/build-angular": "^19.1.4",
     "@angular-eslint/builder": "18.3.1",
     "@angular-eslint/eslint-plugin": "18.3.1",
     "@angular-eslint/eslint-plugin-template": "18.3.1",
     "@angular-eslint/schematics": "18.3.1",
     "@angular-eslint/template-parser": "18.3.1",
-    "@angular/cli": "^18.1.0",
-    "@angular/compiler-cli": "^18.1.0",
+    "@angular/cli": "^19.1.4",
+    "@angular/compiler-cli": "^19.1.3",
     "@types/express": "^4.17.17",
-    "@types/node": "^18.18.0",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^18.19.74",
     "@typescript-eslint/eslint-plugin": "7.11.0",
     "@typescript-eslint/parser": "7.11.0",
     "angular-eslint": "^18.3.1",
     "eslint": "8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.5.0",
     "json-server": "^1.0.0-beta.3",
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.14",
