--- a/crud-angular-19-master/Dockerfile
+++ b/crud-angular-19-master/Dockerfile
@@ -1,7 +1,12 @@
-FROM node:lts
+FROM node:lts AS builder
 WORKDIR /app
 COPY . .
-RUN npm install -g @angular/cli
-RUN npm install 
-EXPOSE 5000
-CMD ["npm", "run", "cstart"]
+RUN npm install
+RUN npm run build
+
+FROM nginx:alpine
+COPY --from=builder /app/dist/my-task-board/browser /usr/share/nginx/static
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY mime.types /etc/nginx/mime.types
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
