--- a/crud-angular-19-master/package.json
+++ b/crud-angular-19-master/package.json
@@ -8,7 +8,8 @@
     "server": "json-server --watch db.json",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest --no-cache",
+    "test-isolated": "jest -c=jest-isolated.config.ts --no-cache",
     "test:watch": "ng test --watch",
     "serve:ssr:my-task-board": "node dist/my-task-board/server/server.mjs",
     "lint": "ng lint",
@@ -36,7 +37,6 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-builders/jest": "^19.0.0",
     "@angular-devkit/build-angular": "^19.1.4",
     "@angular-eslint/builder": "18.3.1",
     "@angular-eslint/eslint-plugin": "18.3.1",
@@ -55,7 +55,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
-    "jest-preset-angular": "^14.5.0",
+    "jest-preset-angular": "^14.5.1",
     "json-server": "^1.0.0-beta.3",
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.14",
