--- a/crud-angular-19-master/.github/workflows/main.yaml
+++ b/crud-angular-19-master/.github/workflows/main.yaml
@@ -1,4 +1,5 @@
 name: CI/CD Pipeline
+
 on:
   pull_request:
     branches: ['master']
@@ -11,14 +12,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22.x
 
       - name: Install dependencies
-        run: npm run install
+        run: npm install
 
       - name: Linting
         run: npm run lint
@@ -33,13 +33,17 @@ jobs:
     name: Continuous Delivery
     runs-on: ubuntu-latest
     needs: CI
-      steps:
+    steps:
       - uses: actions/checkout@v4
+
       - name: Install Vercel CLI
-      - run: npm install --global vercel@latest
+        run: npm install --global vercel@latest
+
       - name: Pull Vercel Environment information
-      run: Vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-      - name: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel pull --yes --token=${{ secrets.VERCEL_TOKEN }}
+
+      - name: Build with Vercel
+        run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
-
